use gather instead of numpy indexing
Former-commit-id: 400b659f06d7283299f67c92786fa7f969333d27

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
@@ -447,18 +447,20 @@
     "        non_flipped_diff, flipped_diff\n",
     "    ])\n",
     "#     print(both_diffs.numpy()[min_index, :, :])\n",
+    "\n",
+    "    diff = tf.gather(\n",
+    "        both_diffs, min_index, axis=0\n",
+    "    )\n",
     "    \n",
-    "    diff = tf.convert_to_tensor(both_diffs.numpy()[min_index, :, :])\n",
+    "#     diff = tf.convert_to_tensor(both_diffs.numpy()[min_index, :, :])\n",
     "    return diff\n",
     "\n",
     "\n",
-    "\n",
     "for parameters, img in create_pipeline_dataset(4).take(1):\n",
-    "    \n",
     "    flipped_parameters = flip_parameters(parameters)\n",
     "    print(determine_corrected_diff(parameters, parameters))\n",
-    "#     print(determine_corrected_diff(parameters, flipped_parameters))\n",
-    "#     print(determine_corrected_diff(flipped_parameters, parameters))"
+    "    print(determine_corrected_diff(parameters, flipped_parameters))\n",
+    "    print(determine_corrected_diff(flipped_parameters, parameters))"
    ]
   },
   {
@@ -467,122 +469,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def determine_diff_rotation_and_flipped(predicted_parameters, ground_truth_parameters):\n",
-    "    \"\"\"Account for the fact that flipped edge lengths is equivalent to a 90 degree rotation\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    flipped_prediction_parameters = \n",
-    "    \n",
-    "    \n",
-    "    predicted_rotations = predicted_parameters[:, 4] * 180\n",
-    "    ground_truth_rotations = ground_truth_parameters[:, 4] * 180\n",
-    "    \n",
-    "    predicted_field_side_lengths = tf.stack([predicted_parameters[:, 2], predicted_parameters[:, 3]])\n",
-    "    ground_truth_field_side_lengths = tf.stack([ground_truth_parameters[:, 2], ground_truth_parameters[:, 3]])\n",
-    "    \n",
-    "    diff_rotation = (predicted_rotations - ground_truth_rotations) % 180\n",
-    "    diff_rotation = tf.reduce_min(tf.stack([diff_rotation, 180 - diff_rotation]), axis=0)\n",
-    "    \n",
-    "    diff_field_side_lengths = tf.reduce_sum(\n",
-    "        (predicted_field_side_lengths - ground_truth_field_side_lengths)**2,\n",
-    "        axis=0\n",
-    "    )\n",
-    "    \n",
-    "#     print(ground_truth_field_side_lengths)\n",
-    "#     print(tf.reverse(\n",
-    "#             ground_truth_field_side_lengths, [0]))\n",
-    "    diff_field_side_lengths_flipped = tf.reduce_sum(\n",
-    "        (\n",
-    "            predicted_field_side_lengths - tf.reverse(\n",
-    "            ground_truth_field_side_lengths, [0])\n",
-    "        )**2,\n",
-    "        axis=0\n",
-    "    )\n",
-    "    \n",
-    "    diff_rotation_flipped = (predicted_rotations - ground_truth_rotations + 90) % 180\n",
-    "    diff_rotation_flipped = tf.reduce_min(\n",
-    "        tf.stack([diff_rotation_flipped, 180 - diff_rotation_flipped]), \n",
-    "        axis=0\n",
-    "    )\n",
-    "    \n",
-    "#     print(diff_rotation)\n",
-    "#     print(diff_field_side_lengths)\n",
-    "#     print(diff_rotation_flipped)\n",
-    "#     print(diff_field_side_lengths_flipped)\n",
+    "def loss_function(predicted_parameters, ground_truth_parameters):\n",
+    "    diff = determine_corrected_diff(predicted_parameters, ground_truth_parameters)\n",
+    "    loss = diff ** 2\n",
     "\n",
-    "    non_flipped = diff_rotation**2 + diff_field_side_lengths\n",
-    "    flipped = diff_rotation_flipped**2 + diff_field_side_lengths_flipped\n",
-    "\n",
-    "    if flipped > non_flipped:\n",
-    "        return predicted_parameters - ground_truth_parameters\n",
-    "    else:\n",
-    "        \n",
-    "        \n",
-    "        return \n",
-    "    \n",
-    "    diff_rotation_and_field_sides = tf.reduce_min(tf.stack([\n",
-    "        diff_rotation**2 + diff_field_side_lengths,\n",
-    "        diff_rotation_flipped**2 + diff_field_side_lengths_flipped\n",
-    "    ]), axis=0)\n",
-    "    \n",
-    "    return diff_rotation_and_field_sides\n",
+    "    return loss\n",
     "\n",
     "\n",
-    "\n",
-    "for ground_truth_parameters, img in test_dataset.take(1):\n",
-    "    predicted_parameters = model(img, training=True)\n",
-    "    \n",
-    "    print(ground_truth_parameters)\n",
-    "    print(predicted_parameters)\n",
-    "    \n",
-    "    print(determine_diff_rotation_and_flipped(predicted_parameters, ground_truth_parameters))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cost_function(predicted_parameters, ground_truth_parameters):\n",
-    "    diff_rotation_and_field_sides = determine_diff_rotation_and_flipped(\n",
-    "        predicted_parameters, ground_truth_parameters)\n",
-    "    \n",
-    "    remaining_predicted = tf.concat([predicted_parameters[:, 0:2], predicted_parameters[:, 5::]], axis=-1)\n",
-    "    remaining_ground_truth = tf.concat([ground_truth_parameters[:, 0:2], ground_truth_parameters[:, 5::]], axis=-1)\n",
-    "    \n",
-    "    remaining_diff = (remaining_predicted - remaining_ground_truth)**2\n",
-    "    \n",
-    "    diff = tf.concat([diff_rotation_and_field_sides[:, None], remaining_diff], axis=-1)\n",
-    "    loss = tf.reduce_sum(diff, axis=-1)\n",
-    "\n",
-    "    return loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for parameters, img in test_dataset.take(1):\n",
+    "for parameters, img in create_pipeline_dataset(2).take(1):\n",
     "    print(parameters)\n",
-    "    print(cost_function(parameters, parameters))"
+    "    print(loss_function(parameters, parameters))\n",
+    "    print(loss_function(parameters, parameters + 1))\n",
+    "    print(loss_function(parameters, parameters + 0.5))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -615,57 +514,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def training_focus(predicted_parameters, ground_truth_parameters, focus):\n",
-    "    new_predicted_parameters = tf.identity(ground_truth_parameters)\n",
-    "    \n",
-    "    if focus == 'field_centre':        \n",
-    "        new_predicted_parameters = tf.concat([\n",
-    "            predicted_parameters[:, 0:2], ground_truth_parameters[:, 2::]\n",
-    "        ], axis=-1)\n",
-    "    \n",
-    "    elif focus == 'field_side_lengths':\n",
-    "        new_predicted_parameters = tf.concat([\n",
-    "            ground_truth_parameters[:, 0:2], \n",
-    "            predicted_parameters[:, 2:4], \n",
-    "            ground_truth_parameters[:, 4::]\n",
-    "        ], axis=-1)\n",
-    "        \n",
-    "    elif focus == 'field_rotation':\n",
-    "        new_predicted_parameters = tf.concat([\n",
-    "            ground_truth_parameters[:, 0:4], \n",
-    "            predicted_parameters[:, 4:5], \n",
-    "            ground_truth_parameters[:, 5::]\n",
-    "        ], axis=-1)\n",
-    "        \n",
-    "    elif focus == 'bb_centre':        \n",
-    "        new_predicted_parameters = tf.concat([\n",
-    "            ground_truth_parameters[:, 0:5], \n",
-    "            predicted_parameters[:, 5:7], \n",
-    "            ground_truth_parameters[:, 7::]\n",
-    "        ], axis=-1)\n",
-    "        \n",
-    "    elif focus == 'bb_diameter':\n",
-    "        new_predicted_parameters = tf.concat([\n",
-    "            ground_truth_parameters[:, 0:7], \n",
-    "            predicted_parameters[:, 7::],\n",
-    "        ], axis=-1)\n",
-    "        \n",
-    "    return new_predicted_parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "BATCH_SIZE = 10\n",
     "\n",
@@ -676,14 +524,9 @@
     "\n",
     "@tf.function(experimental_relax_shapes=True)\n",
     "def train_step(ground_truth_parameters, input_image):\n",
-    "    FOCUS = 'field_centre'\n",
-    "    \n",
     "    with tf.GradientTape() as tape:\n",
     "        predicted_parameters = model(input_image, training=True)\n",
-    "#         new_predicted_parameters = training_focus(\n",
-    "#             predicted_parameters, ground_truth_parameters, FOCUS)\n",
-    "        \n",
-    "        loss = cost_function(new_predicted_parameters, ground_truth_parameters)\n",
+    "        loss = loss_function(predicted_parameters, ground_truth_parameters)\n",
     "\n",
     "    gradients = tape.gradient(loss, model.trainable_variables)\n",
     "    optimizer.apply_gradients(zip(gradients, model.trainable_variables))\n",
