loss function is actually reducing \!\!\! :) yay :)
Former-commit-id: cf21143b3745b9efe5b5a9c4650dea450dc2c578

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
@@ -284,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for parameters, img in test_dataset.take(1):\n",
+    "for parameters, img in create_pipeline_dataset(1).take(1):\n",
     "    results_figures(model, img, parameters)"
    ]
   },
@@ -496,6 +496,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "optimizer = tf.keras.optimizers.Adam()\n",
+    "\n",
     "checkpoint_dir = './training_checkpoints'\n",
     "checkpoint_prefix = os.path.join(checkpoint_dir, \"ckpt\")\n",
     "checkpoint = tf.train.Checkpoint(optimizer=optimizer,\n",
@@ -519,7 +521,7 @@
     "\n",
     "test_dataset = create_pipeline_dataset(1)\n",
     "train_dataset = create_pipeline_dataset(BATCH_SIZE)\n",
-    "optimizer = tf.keras.optimizers.Adam(learning_rate=0.1, beta_1=0.5)\n",
+    "\n",
     "\n",
     "\n",
     "@tf.function(experimental_relax_shapes=True)\n",
