--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
@@ -70,8 +70,8 @@
     "        convolve_block(512),\n",
     "        convolve_block(512),\n",
     "        tf.keras.layers.GlobalAveragePooling2D(),\n",
-    "        tf.keras.layers.Dense(512),\n",
-    "        tf.keras.layers.Dense(512),\n",
+    "        tf.keras.layers.Dense(64),\n",
+    "        tf.keras.layers.Dense(64),\n",
     "        tf.keras.layers.Dense(8),\n",
     "    ]\n",
     "\n",
@@ -114,18 +114,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_single_dataset(grid_size):\n",
-    "\n",
+    "def create_single_dataset(grid_size, fixed_vals=None):\n",
+    "    if fixed_vals is None:\n",
+    "        fixed_vals = {}\n",
+    "    \n",
     "    while True:\n",
-    "        field_centre = tf.random.uniform((2,), -0.5, 0.5)\n",
-    "        field_side_lengths = tf.random.uniform((2,), 0.2, 1.5)\n",
+    "        if not 'field_centre' in fixed_vals:\n",
+    "            field_centre = tf.random.uniform((2,), -0.5, 0.5)\n",
+    "        else:\n",
+    "            field_centre = fixed_vals['field_centre']\n",
+    "        \n",
+    "        if not 'field_side_lengths' in fixed_vals:\n",
+    "            field_side_lengths = tf.random.uniform((2,), 0.2, 1.5)\n",
+    "        else:\n",
+    "            field_side_lengths = fixed_vals['field_side_lengths']\n",
+    "            \n",
     "        field_penumbra = tf.random.uniform((), 0.05, 0.2).numpy()\n",
-    "        field_rotation_raw = tf.random.uniform((), -1, 1).numpy()\n",
-    "        field_rotation = field_rotation_raw * 180\n",
+    "        \n",
+    "        if not 'field_rotation' in fixed_vals:\n",
+    "            field_rotation_raw = tf.random.uniform((), -1, 1).numpy()\n",
+    "            field_rotation = field_rotation_raw * 180\n",
+    "        else:\n",
+    "            field_rotation = fixed_vals['field_rotation']\n",
+    "            field_rotation_raw = field_rotation / 180\n",
     "\n",
-    "        bb_centre = tf.random.uniform((2,), -0.5, 0.5)\n",
-    "        bb_diameter = tf.random.uniform((), 0.05, 0.3).numpy()\n",
-    "        bb_max_attenuation = tf.random.uniform((), 0.1, 0.5).numpy()\n",
+    "        if not 'bb_centre' in fixed_vals:\n",
+    "            bb_centre = tf.random.uniform((2,), -0.5, 0.5)\n",
+    "        else:\n",
+    "            bb_centre = fixed_vals['bb_centre']\n",
+    "            \n",
+    "        if not 'bb_diameter' in fixed_vals:\n",
+    "            bb_diameter = tf.random.uniform((), 0.05, 0.3).numpy()\n",
+    "        else:\n",
+    "            bb_diameter = fixed_vals['bb_diameter']\n",
+    "            \n",
+    "        bb_max_attenuation = tf.random.uniform((), 0.2, 0.5).numpy()\n",
     "\n",
     "\n",
     "        field = profiles.create_rectangular_field_function(\n",
@@ -151,7 +174,7 @@
     "            log_mean_sqr_diff = np.log(np.mean((without_bb - with_bb)**2))\n",
     "#         print(log_mean_sqr_diff)\n",
     "\n",
-    "        if log_mean_sqr_diff > -7:\n",
+    "        if log_mean_sqr_diff > -10:\n",
     "            break\n",
     "            \n",
     "    parameters = tf.concat([field_centre, field_side_lengths, [field_rotation_raw], bb_centre, [bb_diameter]], 0)\n",
@@ -159,7 +182,15 @@
     "            \n",
     "    return parameters, img\n",
     "\n",
-    "parameters, img = create_single_dataset(128)\n",
+    "fixed_vals = {\n",
+    "    'field_centre': [0, 0],\n",
+    "    'field_side_lengths': [1, 1],\n",
+    "    'field_rotation': 0,\n",
+    "#     'bb_centre': None,\n",
+    "    'bb_diameter': 0.5\n",
+    "}\n",
+    "\n",
+    "parameters, img = create_single_dataset(128, fixed_vals)\n",
     "\n",
     "\n",
     "plt.figure()\n",
@@ -182,11 +213,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_pipeline_dataset(batch_size):\n",
+    "def create_pipeline_dataset(batch_size, fixed_vals=None):\n",
     "    def dataset_generator():\n",
     "        image_size_for_current_batch = tf.random.uniform((), 32, 128, dtype=tf.int32).numpy()\n",
     "        for _ in range(batch_size):\n",
-    "            yield create_single_dataset(image_size_for_current_batch)\n",
+    "            yield create_single_dataset(image_size_for_current_batch, fixed_vals=fixed_vals)\n",
     "\n",
     "    dataset = tf.data.Dataset.from_generator(\n",
     "        dataset_generator, \n",
@@ -302,18 +333,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# def extract_parameters(tensor_parameters):\n",
-    "#     parameters = {\n",
-    "#         'field_centre': (tensor_parameters[0], tensor_parameters[1]),\n",
-    "#         'field_side_lengths': (tensor_parameters[2], tensor_parameters[3]),\n",
-    "#         'field_rotation': tensor_parameters[4] * 180,\n",
-    "#         'bb_centre': (tensor_parameters[5], tensor_parameters[6]),\n",
-    "#         'bb_diameter': tensor_parameters[7]\n",
-    "#     }\n",
-    "    \n",
-    "#     return parameters"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -533,8 +553,16 @@
    "source": [
     "BATCH_SIZE = 10\n",
     "\n",
-    "test_dataset = create_pipeline_dataset(1)\n",
-    "train_dataset = create_pipeline_dataset(BATCH_SIZE)\n",
+    "fixed_vals = {\n",
+    "    'field_centre': [0, 0],\n",
+    "    'field_side_lengths': [1, 1],\n",
+    "    'field_rotation': 0,\n",
+    "#     'bb_centre': None,\n",
+    "    'bb_diameter': 0.5\n",
+    "}\n",
+    "\n",
+    "test_dataset = create_pipeline_dataset(1, fixed_vals)\n",
+    "train_dataset = create_pipeline_dataset(BATCH_SIZE, fixed_vals)\n",
     "\n",
     "\n",
     "@tf.function(experimental_relax_shapes=True)\n",
@@ -546,7 +574,7 @@
     "    gradients = tape.gradient(loss, model.trainable_variables)\n",
     "    optimizer.apply_gradients(zip(gradients, model.trainable_variables))\n",
     "    \n",
-    "    reduced_loss = tf.reduce_mean(loss)\n",
+    "    reduced_loss = tf.reduce_mean(loss, axis=0)\n",
     "    return reduced_loss\n",
     "        \n",
     "        \n",
@@ -554,6 +582,24 @@
     "    tf.TensorSpec(shape=[BATCH_SIZE, 8], dtype=tf.float32), \n",
     "    tf.TensorSpec(shape=[BATCH_SIZE, None, None], dtype=tf.float32)\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def extract_parameters(tensor_parameters):\n",
+    "#     parameters = {\n",
+    "#         'field_centre': (tensor_parameters[0], tensor_parameters[1]),\n",
+    "#         'field_side_lengths': (tensor_parameters[2], tensor_parameters[3]),\n",
+    "#         'field_rotation': tensor_parameters[4] * 180,\n",
+    "#         'bb_centre': (tensor_parameters[5], tensor_parameters[6]),\n",
+    "#         'bb_diameter': tensor_parameters[7]\n",
+    "#     }\n",
+    "    \n",
+    "#     return parameters"
    ]
   },
   {
@@ -577,7 +623,14 @@
     "            \n",
     "            logging_index += 1\n",
     "            with summary_writer.as_default():\n",
-    "                tf.summary.scalar('loss', reduced_loss, step=logging_index)\n",
+    "                tf.summary.scalar('field_centre_x', reduced_loss[0], step=logging_index)\n",
+    "                tf.summary.scalar('field_centre_y', reduced_loss[1], step=logging_index)\n",
+    "                tf.summary.scalar('field_side_length_a', reduced_loss[2], step=logging_index)\n",
+    "                tf.summary.scalar('field_side_length_b', reduced_loss[3], step=logging_index)\n",
+    "                tf.summary.scalar('field_rotation', reduced_loss[4], step=logging_index)\n",
+    "                tf.summary.scalar('bb_centre_x', reduced_loss[5], step=logging_index)\n",
+    "                tf.summary.scalar('bb_centre_y', reduced_loss[6], step=logging_index)\n",
+    "                tf.summary.scalar('bb_diameter', reduced_loss[7], step=logging_index)\n",
     "            \n",
     "        \n",
     "        if (epoch + 1) % 20 == 0:\n",
