see if model can learn static case
Former-commit-id: 5c80a4d64a539ebe633857168587ed6fef9bd2d9

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
@@ -50,7 +50,7 @@
     "    result.add(\n",
     "        tf.keras.layers.Conv2D(\n",
     "            filters, 3, strides=1, padding='same',\n",
-    "            kernel_initializer=initializer, use_bias=False))\n",
+    "            kernel_initializer=initializer, use_bias=True))\n",
     "\n",
     "    if apply_batchnorm:\n",
     "        result.add(tf.keras.layers.BatchNormalization())\n",
@@ -66,9 +66,9 @@
     "        convolve_block(128),\n",
     "        convolve_block(256),\n",
     "        convolve_block(512),\n",
-    "        convolve_block(512),\n",
-    "        convolve_block(512),\n",
-    "        convolve_block(512),\n",
+    "#         convolve_block(512),\n",
+    "#         convolve_block(512),\n",
+    "#         convolve_block(512),\n",
     "        tf.keras.layers.GlobalAveragePooling2D(),\n",
     "        tf.keras.layers.Dense(64),\n",
     "        tf.keras.layers.Dense(64),\n",
@@ -122,12 +122,12 @@
     "        if not 'field_centre' in fixed_vals:\n",
     "            field_centre = tf.random.uniform((2,), -0.5, 0.5)\n",
     "        else:\n",
-    "            field_centre = fixed_vals['field_centre']\n",
+    "            field_centre = tf.convert_to_tensor(fixed_vals['field_centre'], dtype=tf.float32)\n",
     "        \n",
     "        if not 'field_side_lengths' in fixed_vals:\n",
     "            field_side_lengths = tf.random.uniform((2,), 0.2, 1.5)\n",
     "        else:\n",
-    "            field_side_lengths = fixed_vals['field_side_lengths']\n",
+    "            field_side_lengths = tf.convert_to_tensor(fixed_vals['field_side_lengths'], dtype=tf.float32)\n",
     "            \n",
     "        field_penumbra = tf.random.uniform((), 0.05, 0.2).numpy()\n",
     "        \n",
@@ -135,18 +135,19 @@
     "            field_rotation_raw = tf.random.uniform((), -1, 1).numpy()\n",
     "            field_rotation = field_rotation_raw * 180\n",
     "        else:\n",
-    "            field_rotation = fixed_vals['field_rotation']\n",
+    "            field_rotation = tf.convert_to_tensor(fixed_vals['field_rotation'], dtype=tf.float32)\n",
     "            field_rotation_raw = field_rotation / 180\n",
+    "            field_rotation = field_rotation.numpy()\n",
     "\n",
     "        if not 'bb_centre' in fixed_vals:\n",
     "            bb_centre = tf.random.uniform((2,), -0.5, 0.5)\n",
     "        else:\n",
-    "            bb_centre = fixed_vals['bb_centre']\n",
+    "            bb_centre = tf.convert_to_tensor(fixed_vals['bb_centre'], dtype=tf.float32)\n",
     "            \n",
     "        if not 'bb_diameter' in fixed_vals:\n",
     "            bb_diameter = tf.random.uniform((), 0.05, 0.3).numpy()\n",
     "        else:\n",
-    "            bb_diameter = fixed_vals['bb_diameter']\n",
+    "            bb_diameter = tf.convert_to_tensor(fixed_vals['bb_diameter'], dtype=tf.float32).numpy()\n",
     "            \n",
     "        bb_max_attenuation = tf.random.uniform((), 0.2, 0.5).numpy()\n",
     "\n",
@@ -186,7 +187,7 @@
     "    'field_centre': [0, 0],\n",
     "    'field_side_lengths': [1, 1],\n",
     "    'field_rotation': 0,\n",
-    "#     'bb_centre': None,\n",
+    "    'bb_centre': [0, 0],\n",
     "    'bb_diameter': 0.5\n",
     "}\n",
     "\n",
@@ -557,7 +558,7 @@
     "    'field_centre': [0, 0],\n",
     "    'field_side_lengths': [1, 1],\n",
     "    'field_rotation': 0,\n",
-    "#     'bb_centre': None,\n",
+    "    'bb_centre': [0, 0],\n",
     "    'bb_diameter': 0.5\n",
     "}\n",
     "\n",
