swap concatenate with add
Former-commit-id: 8de74bdd919457c751b1925cce9860f3f464ccc7 [formerly 2a19759ca24cf4832e600d23ae0e764ec1e2f904]
Former-commit-id: 5c42faafd3b819e23a004d6e38183e99c121210c

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
@@ -41,45 +41,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reversed?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tf.keras.backend.clear_session()\n",
     "\n",
-    "def convolve_block(filters, apply_batchnorm=True):\n",
+    "def convolve_block(filters, kernel, apply_batchnorm=True):\n",
     "    initializer = tf.random_normal_initializer(0., 0.02)\n",
     "\n",
     "    result = tf.keras.Sequential()\n",
     "    result.add(\n",
     "        tf.keras.layers.Conv2D(\n",
-    "            filters, 3, strides=1, padding='same',\n",
+    "            filters, kernel, strides=1, padding='same',\n",
     "            kernel_initializer=initializer, use_bias=True))\n",
     "\n",
     "    if apply_batchnorm:\n",
     "        result.add(tf.keras.layers.BatchNormalization())\n",
     "\n",
-    "    result.add(tf.keras.layers.LeakyReLU())\n",
+    "    result.add(tf.keras.layers.ReLU())\n",
     "\n",
     "    return result\n",
     "\n",
     "\n",
     "def Model():\n",
-    "    network_stack = [\n",
-    "        convolve_block(64, apply_batchnorm=False),\n",
-    "        convolve_block(128),\n",
-    "        convolve_block(256),\n",
-    "        convolve_block(512),\n",
-    "#         convolve_block(512),\n",
-    "#         convolve_block(512),\n",
-    "#         convolve_block(512),\n",
-    "        tf.keras.layers.GlobalAveragePooling2D(),\n",
+    "    down_blocks = [\n",
+    "        convolve_block(64, 3, apply_batchnorm=False),\n",
+    "        convolve_block(64, 3),\n",
+    "        convolve_block(64, 3),\n",
+    "        convolve_block(64, 3),\n",
+    "    ]\n",
+    "    full_connected_blocks = [\n",
     "        tf.keras.layers.Dense(64),\n",
     "        tf.keras.layers.Dense(64),\n",
+    "        tf.keras.layers.Dense(64)\n",
+    "    ]\n",
+    "    up_blocks = [\n",
+    "        convolve_block(64, 3),\n",
+    "        convolve_block(64, 3),\n",
+    "        convolve_block(64, 3),\n",
+    "        convolve_block(64, 3),\n",
+    "    ]\n",
+    "    final_stages = [\n",
+    "        tf.keras.layers.GlobalMaxPooling2D(),\n",
     "        tf.keras.layers.Dense(8),\n",
     "    ]\n",
-    "\n",
+    "    \n",
     "    inputs = tf.keras.layers.Input(shape=[None,None,1], batch_size=None)\n",
     "    x = inputs\n",
+    "    \n",
+    "    skips = []\n",
+    "    for down in down_blocks:\n",
+    "        x = down(x)\n",
+    "        skips.append(x)\n",
     "\n",
-    "    for block in network_stack:\n",
-    "        x = block(x)\n",
+    "    skips = reversed(skips[:-1])\n",
+    "    \n",
+    "    for fc in full_connected_blocks:\n",
+    "        init = x\n",
+    "        x = fc(x)\n",
+    "        x = tf.keras.layers.Add()([x, init])       \n",
+    "        \n",
+    "    for up, skip in zip(up_blocks, skips):\n",
+    "        x = up(x)\n",
+    "        x = tf.keras.layers.Add()([x, skip])\n",
+    "        \n",
+    "    for final in final_stages:\n",
+    "        x = final(x)\n",
     "\n",
     "    return tf.keras.Model(inputs=inputs, outputs=x)\n",
     "\n",
@@ -175,7 +208,7 @@
     "            log_mean_sqr_diff = np.log(np.mean((without_bb - with_bb)**2))\n",
     "#         print(log_mean_sqr_diff)\n",
     "\n",
-    "        if log_mean_sqr_diff > -10:\n",
+    "        if log_mean_sqr_diff > -7:\n",
     "            break\n",
     "            \n",
     "    parameters = tf.concat([field_centre, field_side_lengths, [field_rotation_raw], bb_centre, [bb_diameter]], 0)\n",
@@ -184,11 +217,11 @@
     "    return parameters, img\n",
     "\n",
     "fixed_vals = {\n",
-    "    'field_centre': [0, 0],\n",
-    "    'field_side_lengths': [1, 1],\n",
-    "    'field_rotation': 0,\n",
-    "    'bb_centre': [0, 0],\n",
-    "    'bb_diameter': 0.5\n",
+    "#     'field_centre': [0, 0],\n",
+    "#     'field_side_lengths': [1, 1],\n",
+    "#     'field_rotation': 0,\n",
+    "#     'bb_centre': [0, 0],\n",
+    "#     'bb_diameter': 0.5\n",
     "}\n",
     "\n",
     "parameters, img = create_single_dataset(128, fixed_vals)\n",
@@ -215,8 +248,14 @@
    "outputs": [],
    "source": [
     "def create_pipeline_dataset(batch_size, fixed_vals=None):\n",
+    "    if fixed_vals is None:\n",
+    "        fixed_vals = {}\n",
+    "        \n",
     "    def dataset_generator():\n",
-    "        image_size_for_current_batch = tf.random.uniform((), 32, 128, dtype=tf.int32).numpy()\n",
+    "        if 'image_size' in fixed_vals:\n",
+    "            image_size_for_current_batch = fixed_vals['image_size']\n",
+    "        else:\n",
+    "            image_size_for_current_batch = tf.random.uniform((), 32, 128, dtype=tf.int32).numpy()\n",
     "        for _ in range(batch_size):\n",
     "            yield create_single_dataset(image_size_for_current_batch, fixed_vals=fixed_vals)\n",
     "\n",
@@ -318,7 +357,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for parameters, img in create_pipeline_dataset(1).take(1):\n",
+    "fixed_vals = {\n",
+    "#     'field_centre': [0, 0],\n",
+    "#     'field_side_lengths': [1.5, 1],\n",
+    "#     'field_rotation': 45,\n",
+    "#     'bb_centre': [0, 0],\n",
+    "#     'bb_diameter': 0.4,\n",
+    "#     'image_size': 16,\n",
+    "}\n",
+    "\n",
+    "\n",
+    "for parameters, img in create_pipeline_dataset(1, fixed_vals).take(1):\n",
+    "    dim = img.shape\n",
+    "    print(dim)\n",
+    "    for i in range(dim[0]):        \n",
+    "        plt.figure()\n",
+    "        plt.pcolormesh(img[i, :, :])\n",
+    "        plt.axis('equal')\n",
+    "    plt.show()\n",
+    "    \n",
+    "    \n",
     "    results_figures(model, img, parameters)"
    ]
   },
@@ -503,7 +561,7 @@
    "source": [
     "def loss_function(predicted_parameters, ground_truth_parameters):\n",
     "    diff = determine_corrected_diff(predicted_parameters, ground_truth_parameters)\n",
-    "    loss = tf.abs(diff)\n",
+    "    loss = diff**2\n",
     "\n",
     "    return loss\n",
     "\n",
@@ -552,14 +610,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BATCH_SIZE = 10\n",
+    "BATCH_SIZE = 1\n",
     "\n",
     "fixed_vals = {\n",
-    "    'field_centre': [0, 0],\n",
-    "    'field_side_lengths': [1, 1],\n",
-    "    'field_rotation': 0,\n",
-    "    'bb_centre': [0, 0],\n",
-    "    'bb_diameter': 0.5\n",
+    "#     'field_centre': [0, 0],\n",
+    "#     'field_side_lengths': [1, 1],\n",
+    "#     'field_rotation': 0,\n",
+    "# #     'bb_centre': [0, 0],\n",
+    "#     'bb_diameter': 0.4,\n",
+    "# #     'image_size': 32,\n",
     "}\n",
     "\n",
     "test_dataset = create_pipeline_dataset(1, fixed_vals)\n",
@@ -618,7 +677,7 @@
     "        for parameters, img in test_ds.take(1):\n",
     "            results_figures(model, img, parameters)\n",
     "\n",
-    "        iters_per_epoch = 3\n",
+    "        iters_per_epoch = 10\n",
     "        for parameters, img in tqdm.tqdm(train_ds.take(iters_per_epoch), total=iters_per_epoch):\n",
     "            reduced_loss = concrete_train_step(parameters, img)\n",
     "            \n",
@@ -665,13 +724,6 @@
     "\n",
     "fit(train_dataset, EPOCHS, test_dataset)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
