never converged... a different approach needed
Former-commit-id: 907e06f9d36dd1e5fc27fa63fb8a28c8c937ffa7

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/prototyping/tf_model/000-attempt-arbitrary-shape-encoder.ipynb
@@ -59,60 +59,78 @@
     "    result.add(\n",
     "        tf.keras.layers.Conv2D(\n",
     "            filters, kernel, strides=1, padding='same',\n",
-    "            kernel_initializer=initializer, use_bias=True))\n",
+    "            kernel_initializer=initializer, use_bias=False))\n",
     "\n",
     "    if apply_batchnorm:\n",
     "        result.add(tf.keras.layers.BatchNormalization())\n",
     "\n",
-    "    result.add(tf.keras.layers.ReLU())\n",
+    "    result.add(tf.keras.layers.LeakyReLU())\n",
     "\n",
     "    return result\n",
     "\n",
     "\n",
+    "def evacuation_hatch(x):\n",
+    "    evacuation_stages = [\n",
+    "        tf.keras.layers.GlobalAveragePooling2D(),\n",
+    "        tf.keras.layers.Dense(8),\n",
+    "    ]\n",
+    "    for evac in evacuation_stages:\n",
+    "        x = evac(x)\n",
+    "        \n",
+    "    return x\n",
+    "\n",
+    "\n",
     "def Model():\n",
     "    down_blocks = [\n",
-    "        convolve_block(64, 3, apply_batchnorm=False),\n",
-    "        convolve_block(64, 3),\n",
-    "        convolve_block(64, 3),\n",
-    "        convolve_block(64, 3),\n",
+    "        convolve_block(32, 3, apply_batchnorm=False),\n",
+    "        convolve_block(32, 3),\n",
+    "        convolve_block(32, 3),\n",
+    "        convolve_block(32, 3),\n",
+    "        convolve_block(32, 3),\n",
+    "        convolve_block(32, 3),\n",
+    "        convolve_block(32, 3),\n",
     "    ]\n",
-    "    full_connected_blocks = [\n",
-    "        tf.keras.layers.Dense(64),\n",
-    "        tf.keras.layers.Dense(64),\n",
-    "        tf.keras.layers.Dense(64)\n",
+    "    fully_connected_blocks = [\n",
+    "        tf.keras.layers.Dense(32),\n",
+    "        tf.keras.layers.Dense(32),\n",
+    "        tf.keras.layers.Dense(32)\n",
     "    ]\n",
     "    up_blocks = [\n",
-    "        convolve_block(64, 3),\n",
-    "        convolve_block(64, 3),\n",
-    "        convolve_block(64, 3),\n",
-    "        convolve_block(64, 3),\n",
-    "    ]\n",
-    "    final_stages = [\n",
-    "        tf.keras.layers.GlobalMaxPooling2D(),\n",
-    "        tf.keras.layers.Dense(8),\n",
+    "        convolve_block(32, 3),\n",
+    "        convolve_block(32, 3),\n",
+    "        convolve_block(32, 3),\n",
+    "        convolve_block(32, 3),\n",
+    "        convolve_block(32, 3),\n",
+    "        convolve_block(32, 3),\n",
+    "        convolve_block(32, 3),\n",
     "    ]\n",
     "    \n",
     "    inputs = tf.keras.layers.Input(shape=[None,None,1], batch_size=None)\n",
     "    x = inputs\n",
     "    \n",
     "    skips = []\n",
+    "    evacs = []\n",
+    "    \n",
     "    for down in down_blocks:\n",
     "        x = down(x)\n",
     "        skips.append(x)\n",
+    "        evacs.append(evacuation_hatch(x))\n",
     "\n",
-    "    skips = reversed(skips[:-1])\n",
+    "    skips = reversed(skips)\n",
     "    \n",
-    "    for fc in full_connected_blocks:\n",
+    "    for fc in fully_connected_blocks:\n",
     "        init = x\n",
     "        x = fc(x)\n",
-    "        x = tf.keras.layers.Add()([x, init])       \n",
+    "        x = tf.keras.layers.Add()([x, init])   \n",
+    "        evacs.append(evacuation_hatch(x))\n",
     "        \n",
     "    for up, skip in zip(up_blocks, skips):\n",
     "        x = up(x)\n",
     "        x = tf.keras.layers.Add()([x, skip])\n",
+    "        evacs.append(evacuation_hatch(x))\n",
     "        \n",
-    "    for final in final_stages:\n",
-    "        x = final(x)\n",
+    "    x = tf.keras.layers.Concatenate()(evacs)\n",
+    "    x = tf.keras.layers.Dense(8)(x)\n",
     "\n",
     "    return tf.keras.Model(inputs=inputs, outputs=x)\n",
     "\n",
@@ -120,6 +138,15 @@
     "model = Model()\n",
     "\n",
     "tf.keras.utils.plot_model(model, show_shapes=True, dpi=64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.summary()"
    ]
   },
   {
@@ -173,7 +200,9 @@
     "            field_rotation = field_rotation.numpy()\n",
     "\n",
     "        if not 'bb_centre' in fixed_vals:\n",
-    "            bb_centre = tf.random.uniform((2,), -0.5, 0.5)\n",
+    "            random_range = np.max(field_side_lengths.numpy()) / 2\n",
+    "            \n",
+    "            bb_centre = tf.random.uniform((2,), -random_range, random_range) + field_centre\n",
     "        else:\n",
     "            bb_centre = tf.convert_to_tensor(fixed_vals['bb_centre'], dtype=tf.float32)\n",
     "            \n",
@@ -208,7 +237,7 @@
     "            log_mean_sqr_diff = np.log(np.mean((without_bb - with_bb)**2))\n",
     "#         print(log_mean_sqr_diff)\n",
     "\n",
-    "        if log_mean_sqr_diff > -7:\n",
+    "        if log_mean_sqr_diff > -10:\n",
     "            break\n",
     "            \n",
     "    parameters = tf.concat([field_centre, field_side_lengths, [field_rotation_raw], bb_centre, [bb_diameter]], 0)\n",
@@ -561,7 +590,7 @@
    "source": [
     "def loss_function(predicted_parameters, ground_truth_parameters):\n",
     "    diff = determine_corrected_diff(predicted_parameters, ground_truth_parameters)\n",
-    "    loss = diff**2\n",
+    "    loss = tf.abs(diff)\n",
     "\n",
     "    return loss\n",
     "\n",
@@ -610,7 +639,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BATCH_SIZE = 1\n",
+    "BATCH_SIZE = 10\n",
     "\n",
     "fixed_vals = {\n",
     "#     'field_centre': [0, 0],\n",
@@ -724,6 +753,13 @@
     "\n",
     "fit(train_dataset, EPOCHS, test_dataset)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
